# telltale

./: .gitignore  Cargo.toml  PLAN.md  README.md  TODO.md  sync-to-win.sh
crates/telltale/: Cargo.toml
crates/telltale-core/: Cargo.toml
crates/telltale-core/src/: engine.rs  event.rs  lib.rs  rule.rs  store.rs
crates/telltale-core/src/knowledge/: linux.rs  mod.rs  windows.rs
crates/telltale-core/src/sources/: journald.rs  mod.rs  windows.rs
crates/telltale-core/tests/: replay_fixture.rs
crates/telltale-gui/: Cargo.toml  tauri.conf.json
crates/telltale-gui/src/: commands.rs  main.rs
crates/telltale-gui/ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/telltale-gui/ui/src/: App.svelte  app.css
crates/telltale-gui/ui/src/lib/: AlertDetail.svelte  AlertList.svelte  Dashboard.svelte  RulesList.svelte  format.js
crates/telltale/src/: app.rs  capture.rs  daemon.rs  main.rs  notify.rs  output.rs  replay.rs  scan.rs
crates/telltale/src/sources/: journald.rs  mod.rs  simulated.rs  windows.rs
docs/: rules.md
fixtures/: sample_windows_events.json
