[package]
name = "telltale-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_EventLog", "Win32_System_Threading"] }
