[package]
name = "telltale-gui"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
telltale-core = { path = "../telltale-core" }
serde = { version = "1", features = ["derive"] }
dirs = "5.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.6"

