[package]
name = "telltale"
version = "0.1.0"
edition = "2024"

[dependencies]
telltale-core = { path = "../telltale-core" }
clap = { version = "4.5.37", features = ["derive"] }
dirs = "5.0.1"
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Data_Xml_Dom", "UI_Notifications", "Win32_Foundation", "Win32_Security", "Win32_System_EventLog", "Win32_System_Registry", "Win32_System_Threading"] }
